# flask-blog

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  railway.toml  wsgi.py
.github/workflows/: azure-webapps-python.yml
instance/: db.sqlite
templates/: base.html  blogs.html  create_blog.html  dashboard.html  edit_blog.html  index.html  login.html  profile.html  signup.html
