[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["kamal Kumar <kamal.kumar9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
