[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["kamal Kumar <kamal.kumar9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
